--- a/M3U1/TransportesX/css/transportes.css
+++ b/M3U1/TransportesX/css/transportes.css
@@ -56,7 +56,7 @@ footer {
     color: white;
     text-align: center;
     padding: 5px 0;
-    margin-top:-20px;
+    margin-top:50px;
 }
 nav ul li a.activo{
     background-color:#4c76a5;
@@ -140,4 +140,66 @@ h2{
 .persona p{
     color: #666;
     font-size: 10px;
+}
+.galeria{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+.galeria img{
+    width: 18%;
+    border: 1px solid #ddd;
+    padding: 0.3em;
+    box-sizing: border-box;
+    margin-bottom: 20px;
+    margin-right: 2%;
+}
+.novedades{
+    font-size: 12px;
+}
+.contacto{
+    display: flex;
+    gap: 24px;
+}
+.contacto div{
+    width: 100%;
+}
+.datos p{
+    font-size: 14px;
+}
+.datos ul li{
+    font-size: 13px;
+}
+.formulario p{
+    display: flex;
+}
+.formulario p label{
+    min-width: 80px;
+}
+.formulario p label{
+    display: flex;
+    align-items: center;
+}
+.formulario p:nth-child(4){
+    align-items:start;
+}
+.formulario textarea{
+    resize: none;
+    height: 150px;
+    width: 190px;
+}
+.formulario input[type="submit"]{
+    background-color: #6da9ed;
+    box-shadow: 0 0 10px rgb(0, 0, 0, 0.4);
+    color: white;
+    font-size: 16px;
+    padding: 6px 20px;
+    width: auto;
+    position: relative;
+    left: 5rem;
+    cursor: pointer;
+
+}
+.formulario input[type="submit"]:hover{
+    background-color: #2e64a1;
 }
