React Parte 2 -. Frontend

--- a/M4U1/Transportes/frontend/src/App.css
+++ b/M4U1/Transportes/frontend/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,19 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+}
+.holder{
+  max-width: 960px;
+  margin: 0 auto;
+}
+h2{
+  color: #2e64a1;
+  font-weight: 400;
 }
